# eco-freq

./: LICENSE.txt  README.md  cpu_tdp.csv  ecoctl.py  ecofreq.cfg  ecofreq.cfg.templ  ecofreq.py  ecofreq.service  ecorun.py  ecostat.py  install.sh  mock.cfg  pyproject.toml  requirements.txt
config/: README.md  ecofreq.cfg.co2signal  ecofreq.cfg.energycharts  ecofreq.cfg.stromgedacht  ecofreq.cfg.ukgrid  ecofreq.cfg.watttime  mock.cfg  mqtt.cfg
data/: co2trace.tsv
doc/: CONFIG.md  INSTALL.md  INSTALL.txt  POLICY.md  PROVIDER.md  USAGE.md
ecofreq/: __init__.py  config.py  ecoctl.py  ecofreq.py  ecorun.py  ecostat.py  install.py  ipc.py  mqtt.py  utils.py
ecofreq/config/: co2signal.cfg  default.cfg  docker.cfg  electricitymaps,cfg  energycharts.cfg  mock.cfg  ukgrid,cfg  watttime.cfg
ecofreq/data/: co2trace.tsv
ecofreq/helpers/: __init__.py  amd.py  cgroup.py  cpu.py  docker.py  geo.py  ipmi.py  nvidia.py  suspend.py
ecofreq/installer/: ecofreq.service  install.sh
ecofreq/monitors/: common.py  energy.py  freq.py  idle.py  manager.py
ecofreq/policy/: common.py  cpu.py  governor.py  gpu.py  idle.py  manager.py
ecofreq/providers/: common.py  manager.py  mqtt.py  rest.py
